feat: adding docs workflows

--- a/docs/.header.md
+++ b/docs/.header.md
@@ -1,8 +1,8 @@
 # opentofu-module-GlueKube-HetznerCloud
-Managed by github-org-manager
 
+This opentofu module deploys a Kubernetes cluster on Hetzner Cloud using GlueKube.
 
-
+```hcl
 ```hcl
 module "captain" {
   source                = "git::https://github.com/GlueOps/opentofu-module-GlueKube-HetznerCloud.git"
@@ -128,4 +128,4 @@ module "captain" {
   ]
 }
 
-```
+``
